Se hacen cambios

--- a/games/games_memory/games.html
+++ b/games/games_memory/games.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <!--Link icon-->
-   <link type="image/x-icon" href="./assets/img/logos/logo-favicon.png"
-   rel="icon">
+   <link rel="icon" type="image/x-icon" href="./assets/img/logos/logo-favicon.png" sizes="192x192">
+
  <!--Style Animate-->
  <link
    rel="stylesheet"
@@ -18,7 +18,7 @@
   crossorigin="anonymous">
   <!--Style App-->
   <link href="./assets/css/style.css" rel="stylesheet">
-  <title>MEMORY GAME</title>
+  <title>GAME MEMORY</title>
 </head>
 
 <body>
@@ -30,7 +30,7 @@
         <a class="navbar-brand" href="#">
           <img
             src="./assets/img/logos/logo.png"
-            alt width="30" height="24">
+            alt width="130" height="70">
         </a>
         <label for id="labelName">USERNAME: DIEGO</label>
         <label for id="labelPoints">POINTS: 0</label>
