--- a/games/games_memory/index.html
+++ b/games/games_memory/index.html
@@ -80,7 +80,7 @@ Description:Game index view
             <svg class="bi" width="30" height="24"><use
                 xlink:href="#bootstrap"></use></svg>
           </a>
-          <span class="text-muted">© 2024 Diego Games</span>
+          <span class="text-muted">© 2024 Jose Rosellon</span>
         </div>
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
           <li class="ms-3"><a class="text-muted" href="#"><svg class="bi"
