--- a/games/games_memory/games.html
+++ b/games/games_memory/games.html
@@ -22,17 +22,23 @@
 </head>
 
 <body>
-  <!--Header-->
+  <!--Container-->
+  <div id="container-actions" class="container-actions">
+    <div><img
+        src="https://media.tenor.com/_Nr6JWV4IjgAAAAi/gta-grand-theft-auto.gif"
+        width="150px"></div>
+  </div>
 
+<!--Header-->
   <header>
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand" href="#">
           <img
             src="./assets/img/logos/logo.png"
             alt width="130" height="70">
         </a>
-        <label for id="labelName">USERNAME: DIEGO</label>
+        <label for id="labelName">USERNAME: ROSELLON</label>
         <label for id="labelPoints">POINTS: 0</label>
         <div class="dropdown">
           <button class="btn btn-secondary dropdown-toggle" type="button"
@@ -84,9 +90,11 @@
   <!--End Container level-->
   <!--Container-->
   
-<div class="container contenedor-juego" id="containerGame">
+<div class="container" id="containerGame">
 
 </div>
+<!--End Container-->
+ 
 <!--Container Modal-->
 <div class="modal fade" id="modalPoints" data-bs-backdrop="static"
 data-bs-keyboard="false" tabindex="-1"
@@ -110,12 +118,12 @@ aria-labelledby="staticBackdropLabel" aria-hidden="true">
         <tbody id="contTbody">
           <tr>
             <td class="text-center">1</td>
-            <td class="text-center">DIEGO</td>
+            <td class="text-center">ROSELLON</td>
             <td class="text-center">0</td>
           </tr>
           <tr>
             <td class="text-center">2</td>
-            <td class="text-center">DIEGO</td>
+            <td class="text-center">ROSELLON</td>
             <td class="text-center">0</td>
           </tr>
         </tbody>
@@ -148,38 +156,6 @@ aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <!--My js-->
   <script src="assets/js/main.js"></script>
 
-  <script>
-    getDataStorage('users');
-  function getDataStorage(obj){
-
-let getData=localStorage.getItem(obj);
-//console.log(getData);
-
-let x=JSON.parse(getData);
-//console.log(x['users'][0].username);
-let url=location.href;
-let getDataUri=url.substring(url.indexOf("?")+1,url.length).split("&");
-let name=getDataUri[0].split("=");
-let points=getDataUri[1].split("=");
-document.getElementById("labelName").innerHTML="USERNAME: "+name[1];
-document.getElementById("labelPoints").innerHTML="POINTS: "+points[1];
-createTableUser();
-
-}
-
-function createTableUser(){
-let getData=JSON.parse(localStorage.getItem('User'));
-var contTable=document.getElementById('contTbody');
-var newRow="";
-let cont=0;
-getData['User'].forEach(element => {    
-  cont++;
-  newRow+='<tr><td class="text-center">'+cont+'</td><td class="text-center">'+element.user+'</td><td class="text-center">'+element.points+'</td></tr>'
-});    
-contTable.innerHTML=newRow;
-}
-
-</script>
 </body>
 
 </html>
